# templates

./: README.md  generate_project.py  templates.sublime-project
base/: CMakeLists.txt  LICENSE  Makefile
base/cmake/: Find{project_name}.cmake  {project_name}_examples.cmake  {project_name}_settings.cmake  {project_name}_targets.cmake  {project_name}_tests.cmake
base/doc/: Doxyfile  {project_name}.dox
base/examples/: {project_name}_example.cc
base/include/{project_name}/: {project_name}.h
base/src/: {project_name}.cc
base/tests/: {project_name}_tests.cc
licenses/: bsd.txt  gpl_v3.txt  mit.txt
modules/library_extras/hooks/: header_hook_1.h  header_hook_2.h  header_private_hook.h
modules/ros/hooks/: cmake_include_hook.cmake  cmake_post_library_hook.cmake
modules/ros/template/: stack.xml  {project_name}.rosinstall
modules/ros/template/cmake/: {project_name}_ros.cmake
modules/ros/template/src/: {project_name}_node.cc
